updated usefull links

--- a/footer.html
+++ b/footer.html
@@ -20,7 +20,17 @@
         </div>
         <div class="card">
             <h3>Useful Links</h3>
-            <a href="#">Todo</a>
+            <a href="https://www.pref.kyoto.jp/fukei/foreign/koki_k_t/jitensha/index.html">Rules and Penalties on Riding
+                Bicycle</a>
+            <a href="https://www.studykyoto.jp/en/currentstudents/kyotolife/trash/">How to sort Garbage</a>
+            <a href="https://www.insidekyoto.com/how-to-buy-japan-rail-tickets-and-shinkansen-tickets-online">How to Buy
+                Japan Rail Tickets and Shinkansen Tickets Online</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/emergency/">Emergency and Disaster</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/localgovt/">Kyoto Governmental Offices</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/residence/">Status of Residence</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/bank_postoffice/">Bank and Post office</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/learnjapanese/">Where you can learn Japanese</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/hospitals/">Hospitals, Clinics and Dentists with Interpretation Services</a>
         </div>
         <div class="card">
             <h3>Follow Us</h3>
