--- a/footer.html
+++ b/footer.html
@@ -7,30 +7,37 @@
         </div>
         <div class="card">
             <h3> Official Sites</h3>
-            <a href="https://www.kiyomizudera.or.jp/en/">Kiyomizu-dera Temple</a>
-            <a href="https://kifunejinja.jp/">Kifune Shrine</a>
-            <a href="http://inari.jp/">Fushimi Inari Taisha</a>
-            <a href="https://nijo-jocastle.city.kyoto.lg.jp/">Nijō Castle</a>
-            <a href="http://www.monkeypark.jp/">Monkey Park</a>
-            <a href="http://www.ryoanji.jp/top.html">Ryōan-ji</a>
-            <a href="https://www.keifuku.co.jp/"> Keifuku Electric Railway </a>
-            <a href="https://eizandensha.co.jp/en/">Eizan Electric Railway</a>
-            <a href=" https://www.hankyu.co.jp/en/">Hankyu Railway</a>
-            <a href="https://www.westjr.co.jp/global/en/">JR West</a>
+            <a href="https://www.kiyomizudera.or.jp/en/" target="_blank">Kiyomizu-dera Temple</a>
+            <a href="https://kifunejinja.jp/" target="_blank">Kifune Shrine</a>
+            <a href="http://inari.jp/" target="_blank">Fushimi Inari Taisha</a>
+            <a href="https://nijo-jocastle.city.kyoto.lg.jp/" target="_blank">Nijō Castle</a>
+            <a href="http://www.monkeypark.jp/" target="_blank">Monkey Park</a>
+            <a href="http://www.ryoanji.jp/top.html" target="_blank">Ryōan-ji</a>
+            <a href="https://www.keifuku.co.jp/" target="_blank"> Keifuku Electric Railway </a>
+            <a href="https://eizandensha.co.jp/en/" target="_blank">Eizan Electric Railway</a>
+            <a href=" https://www.hankyu.co.jp/en/" target="_blank">Hankyu Railway</a>
+            <a href="https://www.westjr.co.jp/global/en/" target="_blank">JR West</a>
         </div>
         <div class="card">
             <h3>Useful Links</h3>
-            <a href="https://www.pref.kyoto.jp/fukei/foreign/koki_k_t/jitensha/index.html">Rules and Penalties on Riding
+            <a href="https://www.pref.kyoto.jp/fukei/foreign/koki_k_t/jitensha/index.html" target="_blank">Rules and
+                Penalties on Riding
                 Bicycle</a>
-            <a href="https://www.studykyoto.jp/en/currentstudents/kyotolife/trash/">How to sort Garbage</a>
-            <a href="https://www.insidekyoto.com/how-to-buy-japan-rail-tickets-and-shinkansen-tickets-online">How to Buy
+            <a href="https://www.studykyoto.jp/en/currentstudents/kyotolife/trash/" target="_blank">How to sort
+                Garbage</a>
+            <a href="https://www.insidekyoto.com/how-to-buy-japan-rail-tickets-and-shinkansen-tickets-online"
+                target="_blank">How to Buy
                 Japan Rail Tickets and Shinkansen Tickets Online</a>
-            <a href="https://www.kcif.or.jp/web/en/livingguide/emergency/">Emergency and Disaster</a>
-            <a href="https://www.kcif.or.jp/web/en/livingguide/localgovt/">Kyoto Governmental Offices</a>
-            <a href="https://www.kcif.or.jp/web/en/livingguide/residence/">Status of Residence</a>
-            <a href="https://www.kcif.or.jp/web/en/livingguide/bank_postoffice/">Bank and Post office</a>
-            <a href="https://www.kcif.or.jp/web/en/livingguide/learnjapanese/">Where you can learn Japanese</a>
-            <a href="https://www.kcif.or.jp/web/en/livingguide/hospitals/">Hospitals, Clinics and Dentists with Interpretation Services</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/emergency/" target="_blank">Emergency and Disaster</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/localgovt/" target="_blank">Kyoto Governmental
+                Offices</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/residence/" target="_blank">Status of Residence</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/bank_postoffice/" target="_blank">Bank and Post
+                office</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/learnjapanese/" target="_blank">Where you can learn
+                Japanese</a>
+            <a href="https://www.kcif.or.jp/web/en/livingguide/hospitals/" target="_blank">Hospitals, Clinics and
+                Dentists with Interpretation Services</a>
         </div>
         <div class="card">
             <h3>Follow Us</h3>
