--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
 
             <div class="card">
-                <a href="Ryōan-ji.html">
+                <a href="Ryoan-ji.html">
                     <img src="images/ryon2.jpg" alt="">
                     <div class="content">
                         <h4>Ryōan-ji</h4>
